src/style.css
/* primary colors */
:root {
  --primary-color: #007bff; /* Blue */
  --secondary-color: #6c757d; /* Gray */
  --light-color: #f8f9fa; /* Light Gray */
  --dark-color: #343a40; /* Dark Gray */
}

html,
body {
    width: 100%;
    height: 100%;
    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: var(--dark-color);
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}
.main {
    width: 97%;
    height: 94%;
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: 1fr 4fr;
    gap: 15px;

}

.header {
    grid-column: 1 / 3;
    grid-row: 1;
    border-radius: 10px;
    background-color: var(--light-color);
    text-align: center;
    padding: 20px;
}

.header h1 {
    margin: 30px 40px;
    color: var(--dark-color);
    font-size: 32px;
}

.sidebar {
    grid-column: 1 ;
    grid-row: 2;
    border-radius: 10px;
    background-color: var(--light-color);
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: scroll;
    padding: 10px;
}
.taskcontainer {
    grid-column: 2;
    grid-row: 2;
    border-radius: 10px;
    background-color: var(--light-color);
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: auto;
    padding: 10px;
}


div[class*='todo'], div[class*='project'] {
    border: 3px solid var(--primary-color);
    border-radius: 20px;
    margin-left: 20px;
    margin-right: 25px;
    display: flex;
    justify-content: space-between;
    background-color: var(--light-color);
    padding: 10px;  
}

div[class*='project']:hover {
    border: 3px solid var(--dark-color);
}
div[class*='project'] h2 {
    margin: 0 0 15px 0;
    color: var(--dark-color);
}
div[class*='project'].clicked {
    border: 3px solid var(--dark-color);
}

.folderForm {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content:space-between;
    gap: 5px;
    border: 2px solid var(--primary-color);
    border-radius: 20px;
    padding: 6px 12px;
    margin: 5px 8px;
    background-color: var(--light-color);

}

#title, #description, #dueDate, #priority, #addTodo {
  margin: 5px;
  padding: 5px;
  border: 1px solid var(--secondary-color);
  border-radius: 5px;
  background-color: var(--light-color);
  color: var(--dark-color);
}

.descContainer{
    width: 50%;
    flex-shrink: 0;
}
.descContainer, 
.restContainer {
    border: 2px solid var(--primary-color);
    border-radius: 20px;
    margin: 5px 10px;
    padding: 10px 20px;
}

.taskForm {
    display: flex;
    justify-content: space-between;
    gap: 5px;
    margin: 0px 10px;
    padding: 5px 10px;
}

.left {
    margin: 5px 10px;
    gap: 10px;
    display: flex;
    align-items: center;
}

.right {
    margin: 5px 10px;
    gap: 10px;
    display: flex;
    align-items: center;
}
.header h1 {
    margin: 30px 40px;


}
button {
    all: unset;
    cursor: pointer;
    border: 2px solid var(--primary-color);
    border-radius: 20px;
    padding: 5px 10px;
    background-color: var(--light-color);
    color: var(--dark-color);
    font-weight: bold;
    height: 20px;
    width: 50px;
}

    button:hover {
    background-color: var(--primary-color);
    color: var(--light-color);
}
    button:active {
    background-color: var(--secondary-color);
    outline: none;
}

/* Scrollbar Styling */
::-webkit-scrollbar {
  width: 15px;
  margin-right: 3px;
}

::-webkit-scrollbar-track {
  background-color: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background-color: #007bff;
  border-radius: 10px;
  border: 2px solid #f1f1f1;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #0062cc;
}

/* Styling input */
input[type="text"] {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  box-sizing: border-box;
  border: 2px solid var(--secondary-color);
  border-radius: 5px;
  background-color: var(--light-color);
  color: var(--dark-color);
}

input[type="text"]:focus {
  outline: none;
  border: 2px solid var(--primary-color);
}

#create ,#addTodo {
  background-color: var(--primary-color);
  color: var(--light-color);
  border: none;
  border-radius: 8px;
  padding: 12px 20px;
  cursor: pointer;
  font-size: 16px;
  font-weight: bold;
}

#create:hover, #addTodo:hover {
  background-color: #0056b3;
}

#create:active, #addTodo:active {
  background-color: #004799;
}
label {
    font-size: 23px;
}

